--- a/EHP_Implementacion/EHP_I_Codf/frontend/src/Components/Actividades/ActivityCard/Clock.css
+++ b/EHP_Implementacion/EHP_I_Codf/frontend/src/Components/Actividades/ActivityCard/Clock.css
@@ -4,7 +4,7 @@
   top: 10px;
   right: 20px;
   background-color: #1e1e2f;
-  color: #00ffcc;
+  color: #51ff00;
   font-family: 'Courier New', Courier, monospace;
   font-size: 24px;
   padding: 8px 16px;
@@ -17,9 +17,9 @@
 
 @keyframes glow {
   from {
-    text-shadow: 0 0 10px #00ffcc;
+    text-shadow: 0 0 10px #51ff00;
   }
   to {
-    text-shadow: 0 0 20px #00ffcc, 0 0 30px #00ffcc;
+    text-shadow: 0 0 20px #51ff00, 0 0 30px #51ff00;
   }
 }
