--- a/EHP_Implementacion/EHP_I_Codf/frontend/src/Components/Actividades/ActivityList/ActivityList.css
+++ b/EHP_Implementacion/EHP_I_Codf/frontend/src/Components/Actividades/ActivityList/ActivityList.css
@@ -7,13 +7,12 @@
   padding-top: 60px;
   padding-bottom: 80px;
 
-  width: 100vw;  /* Full width del viewport */
+  width: 100vw;
   min-height: 100vh;
 
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-              url('../../../assets/ECH_icons.png') center/cover no-repeat;
+  
   background-attachment: fixed;
-  overflow-x: hidden; /* previene scroll lateral si algo se desborda */
+  overflow-x: hidden;
 }
 
 .activity-title {
@@ -21,7 +20,7 @@
   font-weight: 600;
   text-align: center;
   margin-bottom: 24px;
-  color: #ffffff;
+  color: #ECF39E;
   font-family: 'Helvetica Neue', 'Segoe UI', sans-serif;
   position: relative;
   text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
@@ -34,18 +33,19 @@
   width: 120px;
   height: 4px;
   border-radius: 4px;
-  background-color: #FF385C;
+  background-color: #90A955;
 }
 
-/* Opcional: mejora visual para los cards */
 .activity-card {
   width: 90%;
   max-width: 1000px;
-  background: #fff;
+  background: rgba(236, 243, 158, 0.12);
   border-radius: 12px;
-  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.06);
+  box-shadow: 0 4px 16px rgba(19, 42, 19, 0.3);
   padding: 20px;
   transition: transform 0.2s ease;
+  backdrop-filter: blur(4px);
+  border: 1px solid rgba(255, 255, 255, 0.08);
 }
 
 .activity-card:hover {
@@ -55,7 +55,7 @@
 hr {
   border: none;
   height: 2px;
-  background-color: #FF385C;
+  background-color: #90A955;
   border-radius: 4px;
   margin-top: 40px;
 }
@@ -63,6 +63,8 @@ hr {
 h3 {
   font-size: 28px;
   margin-top: 0;
-  color: #ffffff;
-  text-shadow: 1px 1px 4px rgba(0,0,0,0.6);
+  color: #ECF39E;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
 }
+
+
