Se agregaron colores esperados (CHAS)

--- a/EHP_Implementacion/EHP_I_Codf/frontend/src/Components/Actividades/ActivityCard/ActivityCard.css
+++ b/EHP_Implementacion/EHP_I_Codf/frontend/src/Components/Actividades/ActivityCard/ActivityCard.css
@@ -197,7 +197,7 @@
 .filter-bar input:hover {
   border-color: #4F772D; /* Verde oliva */
 }
-
+/* Verde oliva */
 .clear-button {
   background-color: #90A955; /* Verde claro */
   color: white;
